Fix tests for core service and added artifact fro common library